Fixed ubnt snmp config

--- a/Ubiquiti/EdgeRouter/snmp.conf
+++ b/Ubiquiti/EdgeRouter/snmp.conf
@@ -1,3 +1,8 @@
-! no SNMP config snippet available for Ubiquiti devices at this time
-! you are welcome to contribute yours on Kentik's config snippet public git repository:
-! https://github.com/kentik/config-snippets/blob/master/Ubiquiti/EdgeRouter/snmp.conf
+! This is a basic set of configuration commands to enable SNMP read-only access
+
+set service snmp community <COMMUNITY> authorization ro
+set service snmp contact <SITE CONTACT>
+set service snmp location <LOCATION
+
+! NOTE: You may need to alter your firewall rules to allow SNMP (udp/161) inbound from either the agent IP or from
+! the Kentik IP rage (209.50.158.0/23)
