--- a/Cisco/Nexus-3000/sflow-agent.conf
+++ b/Cisco/Nexus-3000/sflow-agent.conf
@@ -8,7 +8,7 @@ sflow max-datagram-size 2000
 
 ! Export Flows to your KProxy instance, default KProxy listen port is 9995
 ! if KProxy is configured to listen on another port, change the value below
-sflow collector-ip {{kentik_flow_proxy_agent_IP}} vrf management
+sflow collector-ip {{kentik_flow_proxy_agent_IP}} vrf default source {{device_sending_ip}}
 sflow collector-port 9995
 
 ! Set to IP of interface on next line.
