adding initial bgp template configuration for Nokia 77xx routers

--- a/Nokia/bgp.conf
+++ b/Nokia/bgp.conf
@@ -1,3 +1,60 @@
-# no BGP config snippet available for Nokia devices at this time
-# you are welcome to contribute yours on Kentik's config snippet public git repository:
-# https://github.com/kentik/config-snippets/blob/master/Nokia/bgp.conf
+policy-statement "REJECT-ALL"
+    description "Reject All IPs"
+    entry 1
+        action drop
+        exit
+    exit
+exit
+
+
+prefix-list "KENTIK-NOSEND"
+    # ensure we don't send any default routes
+    prefix 0.0.0.0/0
+exit
+
+policy-statement "KENTIK-OUT"
+    description "Announce all IPV4/6 BGP routes except in KENTIK-NOSEND"
+    entry 10
+        from
+            protocol bgp
+            prefix-list "KENTIK-NOSEND"
+            family ipv4 ipv6
+        exit
+        action drop
+        exit
+    exit                           
+    default-action accept
+    exit
+exit
+
+config router bgp
+    group "RR_PEERS"
+        description "Route Refelector BGP Peering sessions"
+        family ipv4 ipv6
+        remove-private
+        type internal
+        cluster {{cluster_id}}
+        import "REJECT"
+        export "REJECT"
+        graceful-restart
+        exit
+        neighbor {{kentik_UI_bgp_peering_ipv4}}
+            description "Kentik-Detect IPv4 BGP Peer"
+            family ipv4
+            # prevent short-lived reachability issues from triggering neighbor down events
+            hold-time 720
+            authentication-key "{{md5_password}}" hash2
+            import "REJECT"
+            export "KENTIK-OUT"
+        exit
+        neighbor {{kentik_UI_bgp_peering_ipv6}}
+            description "Kentik-Detect IPv6 BGP Peer"
+            family ipv6
+            # prevent short-lived reachability issues from triggering neighbor down events
+            hold-time 720            
+            authentication-key "{{md5_password}}" hash2
+            import "REJECT"
+            export "KENTIK-OUT"
+        exit
+    exit
+exit
