Clean up of mikrotik configs

--- a/Mikrotik/netflow-9-agent.conf
+++ b/Mikrotik/netflow-9-agent.conf
@@ -5,6 +5,6 @@
 
 ### It may be worth tweaking the flow timeouts depending on use case
 /ip traffic-flow
-set active-flow-timeout=45s cache-entries=2M enabled=yes inactive-flow-timeout=30s
+set active-flow-timeout=60s cache-entries=2M enabled=yes inactive-flow-timeout=15s
 /ip traffic-flow target
-add dst-address={{KENTIK_INGEST_IP_FROM_UI}} port={{KENTIK_INGEST_UDP_PORT_FROM_UI}} src-address={{DEVICE_SENDING_IP}}
+add dst-address={{kentik_flow_proxy_IP}} port=9995 src-address={{device_sending_ip}}
