--- a/Mikrotik/snmp.conf
+++ b/Mikrotik/snmp.conf
@@ -4,6 +4,9 @@
 # model = CCR1072-1G-8S+
 
 /snmp community
-add addresses=209.50.158.0/23 name={{SNMP_COMMUNITY}}
+# US cluster
+add addresses=209.50.158.0/22 name={{snmp_community}}
+# EU cluster
+add addresses=193.177.128.0/22 name={{snmp_community}}
 /snmp
 set enabled=yes trap-version=2
