--- a/Mikrotik/bgp.conf
+++ b/Mikrotik/bgp.conf
@@ -15,9 +15,9 @@ add address={{device_sending_ip}} interface=Loopback network={{device_sending_ne
 add address=192.0.2.1 interface="null interface" network=192.0.2.1 comment=RTBH
 
 /routing bgp instance
-set default as={{local_ASN}}
+set default as={{kentik_portal_ASN}}
 /routing bgp peer
-add in-filter=kentik-in multihop=yes name=Kentik out-filter=kentik-out remote-address={{kentik_UI_bgp_peering_ipv4}} remote-as={{local_ASN}} update-source={{local_interface_ip}}
+add in-filter=kentik-in multihop=yes name=Kentik out-filter=kentik-out remote-address={{kentik_UI_bgp_peering_ipv4}} remote-as={{kentik_portal_ASN}} update-source={{local_interface_ip}}
 
 ### Routing filters will depend on use case, so I excluded output filters. Input filters should discard all but /32s with 65535:666 community if using Kentik for RTBH
 /routing filter
