--- a/Mikrotik/bgp.conf
+++ b/Mikrotik/bgp.conf
@@ -11,7 +11,7 @@ add name="null interface"
 
 ### 192.0.2.1 is commonly used for RTBH next-hop, so it is assigned to the "null interface"
 /ip address
-add address={{device_sending_ip}} interface=Loopback network={{device_sending_network}} comment="Kentik Source IP"
+add address={{device_sending_ip}} interface=Loopback network={{network_of_device_sending_ip}} comment="Kentik Source IP"
 add address=192.0.2.1 interface="null interface" network=192.0.2.1 comment=RTBH
 
 /routing bgp instance
