--- a/Mikrotik/bgp.conf
+++ b/Mikrotik/bgp.conf
@@ -11,13 +11,13 @@ add name="null interface"
 
 ### 192.0.2.1 is commonly used for RTBH next-hop, so it is assigned to the "null interface"
 /ip address
-add address={{DEVICE_SENDING_IP}} interface=Loopback network={{NETWORK_OF_DEVICE_SENDING_IP}} comment="Kentik Source IP"
+add address={{device_sending_ip}} interface=Loopback network={{network_of_device_sending_ip}} comment="Kentik Source IP"
 add address=192.0.2.1 interface="null interface" network=192.0.2.1 comment=RTBH
 
 /routing bgp instance
-set default as={{YOUR_LOCAL_ASN}}
+set default as={{kentik_portal_ASN}}
 /routing bgp peer
-add in-filter=kentik-in multihop=yes name=Kentik out-filter=kentik-out remote-address={{KENTIK_UI_BGP_PEERING_IPV4}} remote-as={{KENTIK_ASN AS6169}} update-source={{DEVICE_SENDING_IP}}
+add in-filter=kentik-in multihop=yes name=Kentik out-filter=kentik-out remote-address={{kentik_UI_bgp_peering_ipv4}} remote-as={{kentik_portal_ASN}} update-source={{device_sending_ip}}
 
 ### Routing filters will depend on use case, so I excluded output filters. Input filters should discard all but /32s with 65535:666 community if using Kentik for RTBH
 /routing filter
