Update IOS-XE - Interface Input added
Added collect interface on input.  Checked PCAP of this exact config and no ingress interfaces are reported, no field for them exists with this setup.

--- a/Cisco/IOS-XE/netflow-9-agent.conf
+++ b/Cisco/IOS-XE/netflow-9-agent.conf
@@ -11,6 +11,7 @@ flow record <CUSTOM-FLOW-RECORD>
     collect routing destination as
     collect routing next-hop address ipv4
     collect transport tcp flags
+    collect interface input
     collect interface output
     collect counter bytes
     collect counter packets
