--- a/Juniper/MX-series/telemetry_gnmi.conf
+++ b/Juniper/MX-series/telemetry_gnmi.conf
@@ -1,4 +1,4 @@
-set system services extension-service request-response grpc clear-text address {{device_sending_ip}}
-set system services extension-service request-response grpc clear-text port {{device_listening_port}}
+set system services extension-service request-response grpc clear-text address {{local_address}}
+set system services extension-service request-response grpc clear-text port {{local_port}}
 set system services extension-service notification allow-clients address {{kentik_agent_IP}}
 set system schema openconfig unhide
