--- a/Juniper/MX-series/telemetry_native.conf
+++ b/Juniper/MX-series/telemetry_native.conf
@@ -9,9 +9,9 @@ services {
         }
         export-profile KENTIK-PROF {
             # IP of interface that will be source of telemety records.
-            local-address <local-address>;
+            local-address {{local_address}};
             # local port will be source of telemery records.
-            local-port <local-port>;
+            local-port {{local_port}};
             reporting-rate 30;
             format gpb;
             transport udp;
