--- a/Juniper/MX-series/telemetry_gnmi.conf
+++ b/Juniper/MX-series/telemetry_gnmi.conf
@@ -1,4 +1,15 @@
+/* This method is insecure and should only be used in a lab. */
 set system services extension-service request-response grpc clear-text address {{local_address}}
 set system services extension-service request-response grpc clear-text port {{local_port}}
 set system services extension-service notification allow-clients address {{kentik_agent_IP}}
 set system schema openconfig unhide
+
+/* This method uses SSL with a self-signed cerficate for production environments.
+Upload an x509 certificate to the router or create a self-signed certificate. For example, on any Linux machine:
+$ openssl req -x509 -sha256 -nodes -newkey rsa:2048 -keyout grpc-cert.pem -out grpc-cert.pem
+*/
+set security certificates local grpc-cert load-key-file grpc-cert.pem
+set system services extension-service request-response grpc ssl address {{local_address}}
+set system services extension-service request-response grpc ssl port {{local_port}}
+set system services extension-service request-response grpc ssl local-certificate grpc-cert
+set system services extension-service notification allow-clients address {{kentik_agent_IP}}
