Add in auth and ssl for ST configs

--- a/Arista/telemetry_dialin.conf
+++ b/Arista/telemetry_dialin.conf
@@ -1,5 +1,9 @@
+username gnmi-user privilege 1 role network-operator secret <REDACTED>
+!
 management api gnmi
    transport grpc default
        port {{kentik_telemetry_port_from_UI}}
        no shutdown
+       ssl profile NoTLS1
+      authorization requests
    provider eos-native
