--- a/Cisco/IOS-XR/telemetry_dialin.conf
+++ b/Cisco/IOS-XR/telemetry_dialin.conf
@@ -1,2 +1,10 @@
+usergroup gnmi
+ taskgroup retrieve
+ taskgroup read-only-tg
+!
+username gnmic
+ group gnmi
+ password 7 <REDACTED>
+!
 grpc
  port {{kentik_telemetry_port_from_UI}}
