--- a/Juniper/MX-series/telemetry_dialin.conf
+++ b/Juniper/MX-series/telemetry_dialin.conf
@@ -1,3 +1,19 @@
+/* Create a local user for gnmi-user per Juniper docs (https://www.juniper.net/documentation/us/en/software/junos/grpc-network-services/topics/topic-map/grpc-services-configuring.html#task-configure-gnoi-user-account) */
+system {
+    login {
+        class {
+            grpc-operator {
+                permissions all;
+                allow-grpc-rpc-regexps "/gnmi.gNMI/Get";
+                deny-grpc-rpc-regexps “.*”;
+            }
+        }
+        user gnmi-user {
+            class grpc-operator;
+        }
+    }
+}
+
 /* This method is insecure and should only be used in a lab. */
 system {
     services {
@@ -38,6 +54,8 @@ system {
                     ssl {
                         address {{local_address}};
                         port 443;
+                        use-pki;
+                        hot-reloading;
                         local-certificate grpc-cert
                     }
                 }
