--- a/Huawei/snmp-agent.conf
+++ b/Huawei/snmp-agent.conf
@@ -6,4 +6,5 @@ snmmp-agent acl <ACL_number_used_for_KENTIK_SNMP_POLLING>
 # use cipher to encrypt name when displaying current config
 snmp-agent community read cipher <SNMP_Community_String_for_KENTIK>
 snmp-agent sys-info version v2c
-
+# persist all interface indexes
+snmp-agent ifindex constant
