updating Nokia BGP config with correct reject policy name updating deny prefix list to include v6 default

--- a/Nokia/bgp.conf
+++ b/Nokia/bgp.conf
@@ -1,4 +1,4 @@
-# It is assumed the device is alredy configured with the following attributes
+# It is assumed the device is already configured with the following attributes
 #--------------------------------------------------
 # echo "IP Configuration"
 #--------------------------------------------------
@@ -19,6 +19,7 @@ config
     prefix-list "KENTIK-NOSEND"
         # ensure we don't send any default routes
         prefix 0.0.0.0/0
+        prefix 0::/0
     exit
 
     policy-statement "KENTIK-OUT"
@@ -40,10 +41,11 @@ config
         group "RR_PEERS"
             description "Route Refelector BGP Peering sessions"
             family ipv4 ipv6
+            # family vpn-ipv4 vpn-ipv6
             remove-private
             cluster {{cluster_id}}
-            import "REJECT"
-            export "REJECT"
+            import "REJECT-ALL"
+            export "REJECT-ALL"
             graceful-restart
             exit
             neighbor {{kentik_UI_bgp_peering_ipv4}}
@@ -55,7 +57,7 @@ config
                 # multihop 64 : default for iBGP but can be overridden
                 # local-address {{device_sending_ip}} needed only if different from system IP address
                 authentication-key "{{md5_password}}" hash2
-                import "REJECT"
+                import "REJECT-ALL"
                 export "KENTIK-OUT"
             exit
             neighbor {{kentik_UI_bgp_peering_ipv6}}
@@ -67,7 +69,7 @@ config
                 # multihop 64 : default for iBGP but can be overridden
                 # local-address {{device_sending_ip}} : needed only if different from system IP address
                 authentication-key "{{md5_password}}" hash2
-                import "REJECT"
+                import "REJECT-ALL"
                 export "KENTIK-OUT"
             exit
         exit
