--- a/Juniper/QFX_EX-series/sflow-agent.conf
+++ b/Juniper/QFX_EX-series/sflow-agent.conf
@@ -1,6 +1,6 @@
 protocols {
     sflow {
-        agent-id {{kentik_flow_proxy_IP}};
+        agent-id {{device_loopback_ip or sending_ip}};
         polling-interval 60;
         sample-rate ingress {{device_sample_rate}};
         source-ip {{device_sending_ip}};
