--- a/Juniper/MX-series/telemetry_dialin.conf
+++ b/Juniper/MX-series/telemetry_dialin.conf
@@ -1,4 +1,14 @@
-/* Create a local user for gnmi-user per Juniper docs (https://www.juniper.net/documentation/us/en/software/junos/grpc-network-services/topics/topic-map/grpc-services-configuring.html#task-configure-gnoi-user-account) */
+/* Create a local user for gnmi-user per Juniper docs
+(https://www.juniper.net/documentation/us/en/software/junos/grpc-network-services/topics/topic-map/grpc-services-configuring.html#task-configure-gnoi-user-account)
+*/
+
+/* The allow-commands-regexps and deny-commands-regexps statements were introduced in Junos OS Release 18.1
+ssl statement introduced in Junos OS Release 16.1
+mutual-authentication, client-certificate-request, and certificate-authority options added in Junos OS Release 17.4R1
+hot-reloading option added in Junos OS Release 20.4R1
+use-pki option added in Junos OS Evolved Release 22.2R1
+*/
+
 system {
     login {
         class {
