Move permissions for the user down to the min needed

--- a/Juniper/MX-series/telemetry_dialin.conf
+++ b/Juniper/MX-series/telemetry_dialin.conf
@@ -13,7 +13,7 @@ system {
     login {
         class {
             grpc-operator {
-                permissions all;
+                permissions view;
                 allow-grpc-rpc-regexps "/gnmi.gNMI/Get";
                 deny-grpc-rpc-regexps “.*”;
             }
