udpating sflow agent-id to sending_ip

--- a/Juniper/QFX_EX-series/sflow-agent.conf
+++ b/Juniper/QFX_EX-series/sflow-agent.conf
@@ -1,7 +1,7 @@
 protocols {
     sflow {
-        agent-id {{kentik_flow_proxy_IP}};
-        polling-interval 0;
+        agent-id {{device_sending_ip}};
+        polling-interval 60;
         sample-rate ingress {{device_sample_rate}};
         source-ip {{device_sending_ip}};
         # collector sends to your Kentik Flow Proxy aka KPROXY
