--- a/Juniper/QFX_EX-series/sflow.conf
+++ b/Juniper/QFX_EX-series/sflow.conf
@@ -1,6 +1,6 @@
 protocols {
     sflow {
-        agent-id {{kentik_ingest_ip_from_UI}};
+        agent-id {{device_sending_ip}};
         polling-interval 0;
         sample-rate ingress {{device_sample_rate}};
         source-ip {{device_sending_ip}};
