Update bgp.conf for Arista

--- a/Arista/bgp.conf
+++ b/Arista/bgp.conf
@@ -1,3 +1,38 @@
-# no BGP config snippet available for Arista devices at this time
-# you are welcome to contribute yours on Kentik's config snippet public git repository:
-# https://github.com/kentik/config-snippets/blob/master/Arista/bgp.conf
+route-map deny-all deny 10
+!
+route-map allow-all-no-default deny 10
+   match ip address prefix-list default-route
+!
+route-map allow-all-no-default deny 20
+   match ipv6 address prefix-list default-route-v6
+!
+route-map allow-all-no-default permit 30
+!
+router bgp {{local_ASN}}
+   router-id {{ router_id }}
+   neighbor route-consumers_v4 peer group
+   neighbor route-consumers_v4 maximum-routes 1
+   neighbor route-consumers_v4 maximum-accepted-routes 1
+   neighbor route-consumers_v6 peer group
+   neighbor route-consumers_v6 maximum-routes 1
+   neighbor route-consumers_v6 maximum-accepted-routes 1
+   neighbor {{kentik_UI_bgp_peering_ipv4}} peer group route-consumers_v4
+   neighbor {{kentik_UI_bgp_peering_ipv4}} remote-as {{local_ASN}}
+   neighbor {{kentik_UI_bgp_peering_ipv4}} route-reflector-client
+   neighbor {{kentik_UI_bgp_peering_ipv4}} update-source Loopback0
+   neighbor {{kentik_UI_bgp_peering_ipv4}} description Kentik-Route-Consumer-v4
+   neighbor {{kentik_UI_bgp_peering_ipv6}} peer group route-consumers_v6
+   neighbor {{kentik_UI_bgp_peering_ipv6}} remote-as {{local_ASN}}
+   neighbor {{kentik_UI_bgp_peering_ipv6}} route-reflector-client
+   neighbor {{kentik_UI_bgp_peering_ipv6}} update-source Loopback0
+   neighbor {{kentik_UI_bgp_peering_ipv6}} description Kentik-Route-Consumer-v6
+   !
+   address-family ipv4
+      neighbor route-consumers_v4 activate
+      neighbor route-consumers_v4 route-map deny-all in
+      neighbor route-consumers_v4 route-map allow-all-no-default out
+   !
+   address-family ipv6
+      neighbor route-consumers_v6 activate
+      neighbor route-consumers_v6 route-map deny-all in
+      neighbor route-consumers_v6 route-map allow-all-no-default out
