adding default ACLs

--- a/Arista/bgp.conf
+++ b/Arista/bgp.conf
@@ -1,3 +1,9 @@
+ip prefix-list default-route
+   seq 10 permit 0.0.0.0/0
+!
+ipv6 prefix-list default-route-v6
+   seq 10 permit ::/0
+!
 route-map deny-all deny 10
 !
 route-map allow-all-no-default deny 10
