Add in auth and ssl for ST configs (#65)
* Add in auth and ssl for ST configs

* Add comments on version requirements for various commands

* Move permissions for the user down to the min needed

--- a/Juniper/MX-series/telemetry_dialin.conf
+++ b/Juniper/MX-series/telemetry_dialin.conf
@@ -1,3 +1,29 @@
+/* Create a local user for gnmi-user per Juniper docs
+(https://www.juniper.net/documentation/us/en/software/junos/grpc-network-services/topics/topic-map/grpc-services-configuring.html#task-configure-gnoi-user-account)
+*/
+
+/* The allow-commands-regexps and deny-commands-regexps statements were introduced in Junos OS Release 18.1
+ssl statement introduced in Junos OS Release 16.1
+mutual-authentication, client-certificate-request, and certificate-authority options added in Junos OS Release 17.4R1
+hot-reloading option added in Junos OS Release 20.4R1
+use-pki option added in Junos OS Evolved Release 22.2R1
+*/
+
+system {
+    login {
+        class {
+            grpc-operator {
+                permissions view;
+                allow-grpc-rpc-regexps "/gnmi.gNMI/Get";
+                deny-grpc-rpc-regexps “.*”;
+            }
+        }
+        user gnmi-user {
+            class grpc-operator;
+        }
+    }
+}
+
 /* This method is insecure and should only be used in a lab. */
 system {
     services {
@@ -38,6 +64,8 @@ system {
                     ssl {
                         address {{local_address}};
                         port 443;
+                        use-pki;
+                        hot-reloading;
                         local-certificate grpc-cert
                     }
                 }
