adding ptx specific config and flowtable resizing

--- a/Juniper/MX-series/ipfix-linecards.conf
+++ b/Juniper/MX-series/ipfix-linecards.conf
@@ -1,8 +1,24 @@
 # For each linecard with interfaces, add a sampling-instance to 
 # the chassis config stanza
+
+# Starting with Junos OS Release 15.1F2 Junos reverted to allocating only one 1K IPv4 flow table
+# This table size is unsufficient to accurately report netflow
+# Flow Tables must be recarved depending on the type of linecard activated for sampling
+# https://www.juniper.net/documentation/us/en/software/junos/cli-reference/topics/ref/statement/flow-table-size-edit-services.html
+
 chassis {
   fpc 0 {
     sampling-instance <KENTIK>;
+    # required on any MX running a release later than Junos 15.1F2
+    # NOT supported on PTX1000 however!
+    inline-services {
+        flow-table-size {
+            # This example would be appropriate for MPC2E, MPC3E, and MPC4E
+            # See link above for other supported combinations by linecard.
+            ipv4-flow-table-size 10;
+            ipv6-flow-table-size 5;
+        }
+    }    
   }
   fpc 1 {
     sampling-instance <KENTIK>;
