adding default reject to import policy if no mitigation

--- a/Juniper/MX-series/bgp.conf
+++ b/Juniper/MX-series/bgp.conf
@@ -13,6 +13,12 @@ policy-options {
         }
         then accept;
     }
+    # Inbound policy for Kentik BGP session (no mitigation)
+    policy-statement KENTIK-DENY-ALL {
+        term REJECT {
+            then reject;
+        }
+    } 
 }
 
 protocols {
@@ -28,6 +34,7 @@ protocols {
             family inet-vpn {
                 unicast;
             }
+            import KENTIK-DENY-ALL;
             export KENTIK-OUT;
             # IP this RR should identify itself as in the cluster ID field
             cluster {{cluster_id}};
